--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -1,4 +1,4 @@
-<nav>
+<nav class="background-color: blue">
   <div class="nav-wrapper">
     <a routerLink="" class="brand-logo">Expense Manager</a>
     <ul id="nav-mobile" class="right hide-on-med-and-down" *ngIf="isAdmin">
