--- a/src/app/recurring-expenses/recurring-expenses.component.html
+++ b/src/app/recurring-expenses/recurring-expenses.component.html
@@ -28,7 +28,7 @@
         </a>
       </td>
       <td>
-        <a (click)="deleteRecurringExpense(expense)" class="pointer">
+        <a (click)="deleteRecurringExpense(recurringExpense)" class="pointer">
           <i class="material-icons">delete</i>
         </a>
       </td>
