--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -2,7 +2,7 @@
   <div class="nav-wrapper">
     <a routerLink="" class="brand-logo">Expense Manager</a>
     <ul id="nav-mobile" class="right hide-on-med-and-down" *ngIf="isAdmin">
-      <li><a routerLink="/recurringExpenses" routerLinkActive="active">Recurring Expenses</a></li>
+      <li><a routerLink="/recurring/all" routerLinkActive="active">Recurring</a></li>
     </ul>    
     <ul id="nav-mobile" class="right hide-on-med-and-down" *ngIf="loggedIn">
       <li><a routerLink="/logout" routerLinkActive="active">Logout</a></li>
