add ref data and recurring

--- a/src/app/expenses/expense-form/expense-form.component.html
+++ b/src/app/expenses/expense-form/expense-form.component.html
@@ -70,6 +70,23 @@
       <tr>
         <td>
           <div class="input-field col s12">
+            <input id="notes" type="text" class="validate"
+                   [(ngModel)]="expense.notes" formControlName="notes">
+            <label for="notes"
+                   [class.active]="expense.notes">
+              Notes
+            </label>
+          </div>
+        </td>
+        <td>
+          <div class="input-field col s12">
+
+          </div>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <div class="input-field col s12">
             <input id="recurring" type="checkbox" formControlName="recurring" (click)="showHideRecurring()"
             >
             <label for="recurring">
@@ -89,12 +106,12 @@
       <tr>
         <td>
           <div class="input-field col s12">
-            <select id="recurringType" [(ngModel)]="expense.recurringType" formControlName="recurringType" materialize="material_select" [materializeSelectOptions]="recurringTypes">
+            <select id="recurringTypeId" [(ngModel)]="expense.recurringTypeId" formControlName="recurringTypeId" materialize="material_select" [materializeSelectOptions]="recurringTypes">
               <option value="" disabled selected>Choose your option</option>
               <option *ngFor="let item of recurringTypes" [value]="item.value">{{item.description}}</option>
             </select>
             <label for="recurringType"
-                   [class.active]="expense.recurringType">
+                   [class.active]="expense.recurringTypeId">
               Recurring Type
             </label>
           </div>
