--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -2,6 +2,9 @@
   <div class="nav-wrapper">
     <a routerLink="" class="brand-logo">Expense Manager</a>
     <ul id="nav-mobile" class="right hide-on-med-and-down" *ngIf="isAdmin">
+      <li><a routerLink="/refdatas/all" routerLinkActive="active">Ref Data</a></li>
+    </ul>    
+    <ul id="nav-mobile" class="right hide-on-med-and-down" *ngIf="isAdmin">
       <li><a routerLink="/recurring/all" routerLinkActive="active">Recurring</a></li>
     </ul>    
     <ul id="nav-mobile" class="right hide-on-med-and-down" *ngIf="loggedIn">
