--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -43,9 +43,6 @@
             </td>
           </tr>
           <tr>
-            <td><b>Income Total:</b></td><td colspan="3">{{ incomeTotal }}</td>
-          </tr>  
-          <tr>
             <td colspan=5>
               <div class="fixed-action-btn" style="bottom: 45px; left: 24px;">
                 <a class="btn-floating btn-large waves-effect waves-light green"
@@ -56,6 +53,11 @@
             </td>
           </tr>
         </tbody>
+        <tfoot>
+          <tr>
+            <td><b>Income Total:</b></td><td colspan="3">{{ incomeTotal }}</td>
+          </tr>  
+        </tfoot>
       </table>
     </td>    
     <td style="vertical-align:top">
@@ -92,9 +94,6 @@
             </td>
           </tr>
           <tr>
-            <td><b>Expense Total:</b></td><td colspan="3">{{ expenseTotal }}</td>
-          </tr>
-          <tr>
             <td>
               <div class="fixed-action-btn" style="bottom: 45px; right: 24px;">
                 <a class="btn-floating btn-large waves-effect waves-light green"
@@ -105,6 +104,11 @@
             </td>
           </tr>
         </tbody>
+        <tfoot>
+          <tr>
+            <td><b>Expense Total:</b></td><td colspan="3">{{ expenseTotal }}</td>
+          </tr>
+        </tfoot>
       </table>
     </td>
   </tr>
@@ -150,9 +154,6 @@
                   </td>
                 </tr>
                 <tr>
-                  <td><b>Expense Total:</b></td><td colspan="3">{{ unpaidExpenseTotal }}</td>
-                </tr>
-                <tr>
                   <td>
                     <div class="fixed-action-btn" style="bottom: 45px; right: 24px;">
                       <a class="btn-floating btn-large waves-effect waves-light green"
@@ -162,7 +163,12 @@
                     </div>
                   </td>
                 </tr>
-              </tbody>
+              </tbody>                
+              <tfoot>
+                  <tr>
+                    <td><b>Expense Total:</b></td><td colspan="3">{{ unpaidExpenseTotal }}</td>
+                  </tr>
+              </tfoot>
             </table>
           </td>
         </tr>
