--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -16,7 +16,7 @@
     </div>
     <div class="row">
       <div class="input-field col s12">
-        <input id="password" type="text" class="validate"
+        <input id="password" type="password" class="validate"
                [(ngModel)]="login.password" formControlName="password"
                [class.invalid]="form.controls['password'].touched && !form.controls['password'].valid"
         >
