refactor and due date not required for recurring

--- a/src/app/expenses/expense-form/expense-form.component.html
+++ b/src/app/expenses/expense-form/expense-form.component.html
@@ -22,7 +22,7 @@
       </tr>
       <tr>
         <td>
-          <div class="input-field col s12">
+          <div class="input-field col s8">
             <input id="amount" type="text" class="validate"
                    [(ngModel)]="expense.amount" formControlName="amount"
                    [class.invalid]="form.controls['amount'].touched && !form.controls['amount'].valid"
@@ -33,16 +33,40 @@
               Amount
             </label>
           </div>
+          <div class="input-field col s4">
+            <input id="paid" type="checkbox"
+                   [(ngModel)]="expense.paid" formControlName="paid"
+            >
+            <label for="paid">
+              Paid
+            </label>
+          </div>                              
+        </td>
+        <td>
+          <div class="input-field col s12">
+
+          </div>
+        </td>        
+      </tr>      
+      <tr>
+        <td>
+          <div class="input-field col s12">
+            <input id="recurring" type="checkbox" formControlName="recurring" (click)="showHideRecurring()"
+            >
+            <label for="recurring">
+              Recurring
+            </label>
+          </div>
         </td>
         <td>
           <div class="input-field col s12">
 
           </div>
         </td>
-      </tr>      
+      </tr>
       <tr>
         <td>
-          <div class="input-field col s8">
+          <div class="input-field col s12" id="dueDateDiv">
             <input id="dueDateString" type="text" class="validate"
                    [(ngModel)]="expense.dueDateString" formControlName="dueDateString"
                    [class.invalid]="form.controls['dueDateString'].touched && !form.controls['dueDateString'].valid"
@@ -53,14 +77,9 @@
               Due Date(dd-MM-yyyy)
             </label>
           </div>
-          <div class="input-field col s4">
-            <input id="paid" type="checkbox"
-                   [(ngModel)]="expense.paid" formControlName="paid"
-            >
-            <label for="paid">
-              Paid
-            </label>
-          </div>                    
+          <div class="input-field col s12">
+
+          </div>
         </td>
         <td>
           <div class="input-field col s12">
@@ -84,22 +103,6 @@
           </div>
         </td>
       </tr>
-      <tr>
-        <td>
-          <div class="input-field col s12">
-            <input id="recurring" type="checkbox" formControlName="recurring" (click)="showHideRecurring()"
-            >
-            <label for="recurring">
-              Recurring
-            </label>
-          </div>
-        </td>
-        <td>
-          <div class="input-field col s12">
-
-          </div>
-        </td>
-      </tr>      
       </table>
       <br/>
       <table id="recurringTable" style="display: none">
@@ -151,7 +154,7 @@
     </table>
     <p></p>
     <button class="btn waves-effect waves-light" type="submit"
-            [disabled]="!form.valid">
+            [disabled]="validateForm()">
       Submit<i class="material-icons right">send</i>
     </button>
   </form>
